# WhatWeatherItTakes

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  analysis_common.py  analysis_shap.py  fetch_stations.py  fix_elevations.py  main.py  merge_shap_original.py  poetry.toml  process.py  pyproject.toml  train.py
Data/stations/: ds100_stations.csv
src/whatweatherittakes/training/: training_utils.py
