[project]
name = "whatweatherittakes"
version = "0.1.0"
description = "Read Hack4Rail Excel data with Polars"
requires-python = ">=3.12"
dependencies = [
    "polars[excel]>=1.41.2",
    "seaborn>=0.13",
    "matplotlib>=3.9",
    "pyarrow>=17.0",
    "lightgbm>=4.0",
    "scikit-learn>=1.5",
    "gplearn>=0.4",
    "srtm.py>=0.3",
    "shap>=0.52.0",
    "statsmodels>=0.14.6",
    "pre-commit>=4.6.0",
]

[project.scripts]
h4r-ingest = "main:ingest"
h4r-process = "process:process"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"